# xmlcopyeditor

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  autogen.sh  config.status  configure  configure.ac  libtool
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1
data/: Makefile  Makefile.am  Makefile.in  xmlcopyeditor.1  xmlcopyeditor.appdata.xml  xmlcopyeditor.appdata.xml.in  xmlcopyeditor.desktop  xmlcopyeditor.desktop.in
debian/: changelog  control  copyright  watch
features/001-dita-wysiwyg-mode/: PHASE2_COMPLETE.md  PROGRESS.md  plan.md  spec.md  tasks.md
m4/: Makefile  Makefile.am  Makefile.in
mac/: Applications.lnk  Info.plist  InfoPlist.strings  Makefile  Makefile.diskimage  version.plist  xmlcopyeditor.icns
po/: .intltool-merge-cache  LINGUAS  Makefile  Makefile.in  Makevars  POTFILES  POTFILES.in  ca.gmo  ca.po  de.gmo  de.po  en_US.gmo  en_US.po  es.gmo  es.po  fr.gmo  fr.po  it.gmo  it.po  km.gmo  km.po  nl.gmo  nl.po  ru.gmo  ru.po  sk.gmo  sk.po  sv.gmo  sv.po  uk_UA.gmo  uk_UA.po  xmlcopyeditor.pot  zh_CN.gmo  zh_CN.po  zh_TW.gmo  zh_TW.po
src/: .cproject  Makefile  Makefile.am  Makefile.in  aboutdialog.cpp  aboutdialog.h  associatedialog.cpp  associatedialog.h  binaryfile.cpp  binaryfile.h  casehandler.cpp  casehandler.h  catalogresolver.cpp  catalogresolver.h  commandpanel.cpp  commandpanel.h  contexthandler.cpp  contexthandler.h  ditadetector.cpp  ditadetector.h  ditadoc.cpp  ditadoc.h  ditamapmodel.cpp  ditamapmodel.h  ditatopicmodel.cpp  ditatopicmodel.h  ditawysiwygctrl.cpp  ditawysiwygctrl.h  dtd2schema.cpp  dtd2schema.h  exportdialog.cpp  exportdialog.h  findreplacepanel.cpp  findreplacepanel.h  getword.cpp  getword.h  globalreplacedialog.cpp  globalreplacedialog.h  housestyle.cpp  housestyle.h  (+105 more)
src/.deps/: aboutdialog.Po  associatedialog.Po  binaryfile.Po  casehandler.Po  catalogresolver.Po  commandpanel.Po  contexthandler.Po  ditadetector.Po  ditadoc.Po  ditamapmodel.Po  ditatopicmodel.Po  ditawysiwygctrl.Po  dtd2schema.Po  exportdialog.Po  findreplacepanel.Po  getword.Po  globalreplacedialog.Po  housestyle.Po  housestylereader.Po  housestylewriter.Po  insertpanel.Po  locationpanel.Po  mp3album.Po  myhtmlpane.Po  myipc.Po  mynotebook.Po  mypropertysheet.Po  nocasecompare.Po  pathresolver.Po  readfile.Po  replace.Po  rule.Po  styledialog.Po  threadreaper.Po  validationthread.Po  wrapaspell.Po  wrapdaisy.Po  wrapexpat.Po  wraplibxml.Po  wrapregex.Po  (+26 more)
src/help/: xmlcopyeditor.chm
src/help/html/: font_size.html
src/xpm/: appicon.xpm
tests/: Makefile  test-dita-standalone  test-dita-standalone.cpp  tests  tests-dita-models.cpp  tests-readfile.cpp  tests-replace.cpp  tests-stringset.cpp
tests/test_data/: complex_topic.dita  sample_map.ditamap  simple_topic.dita
